add refresh control for saving

--- a/PetAppointmentScheduler/Assets/Base.lproj/Main.storyboard
+++ b/PetAppointmentScheduler/Assets/Base.lproj/Main.storyboard
@@ -18,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1G7-lX-F19">
-                                <rect key="frame" x="0.0" y="140" width="414" height="722"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" estimatedRowHeight="76" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1G7-lX-F19">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AppointmentTableViewCell" rowHeight="161" id="l4l-NY-7x9" customClass="AppointmentTableViewCell">
@@ -93,7 +93,7 @@
                             <constraint firstItem="8Sd-Da-GzY" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="FWX-zo-3MY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1G7-lX-F19" secondAttribute="bottom" id="Plq-is-EcJ"/>
                             <constraint firstItem="1G7-lX-F19" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="yl5-ix-vYb"/>
-                            <constraint firstItem="1G7-lX-F19" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="z16-h1-q5B"/>
+                            <constraint firstItem="1G7-lX-F19" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="z16-h1-q5B"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -188,7 +188,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ud4-Am-Kqf">
-                                <rect key="frame" x="20" y="416.5" width="374" height="63"/>
+                                <rect key="frame" x="20" y="200.5" width="374" height="63"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="type" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XOi-gb-rhi">
                                         <rect key="frame" x="0.0" y="0.0" width="44" height="26.5"/>
@@ -208,6 +208,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="JLG-ua-Tky" firstAttribute="leading" secondItem="O1b-ks-AiK" secondAttribute="leading" id="6lz-AB-316"/>
+                            <constraint firstItem="ud4-Am-Kqf" firstAttribute="top" secondItem="CeD-Hc-PaB" secondAttribute="bottom" constant="20" id="9Ms-ui-FFo"/>
                             <constraint firstItem="W5w-3J-UMT" firstAttribute="leading" secondItem="O1b-ks-AiK" secondAttribute="leading" constant="20" id="C9c-eN-csl"/>
                             <constraint firstItem="JLG-ua-Tky" firstAttribute="trailing" secondItem="O1b-ks-AiK" secondAttribute="trailing" id="DW6-gc-8iZ"/>
                             <constraint firstItem="CeD-Hc-PaB" firstAttribute="leading" secondItem="O1b-ks-AiK" secondAttribute="leading" constant="20" id="LRr-Vs-Yfo"/>
@@ -216,7 +217,6 @@
                             <constraint firstItem="O1b-ks-AiK" firstAttribute="trailing" secondItem="W5w-3J-UMT" secondAttribute="trailing" constant="20" id="W5e-dP-1Mc"/>
                             <constraint firstItem="O1b-ks-AiK" firstAttribute="trailing" secondItem="CeD-Hc-PaB" secondAttribute="trailing" constant="20" id="mdh-7b-rKy"/>
                             <constraint firstItem="CeD-Hc-PaB" firstAttribute="top" secondItem="O1b-ks-AiK" secondAttribute="top" constant="20" id="nXU-eI-CbH"/>
-                            <constraint firstItem="ud4-Am-Kqf" firstAttribute="centerY" secondItem="XlX-SE-COq" secondAttribute="centerY" id="qmy-nH-zw4"/>
                             <constraint firstItem="JLG-ua-Tky" firstAttribute="bottom" secondItem="O1b-ks-AiK" secondAttribute="bottom" id="rnb-eu-D06"/>
                             <constraint firstItem="ud4-Am-Kqf" firstAttribute="leading" secondItem="O1b-ks-AiK" secondAttribute="leading" constant="20" id="ymr-qr-45R"/>
                         </constraints>
